# turbin3-builders-q4-2024-cohort

./: README.md
airdrop/: .gitignore  airdrop.ts  enroll.ts  keygen.ts  package.json  transfer.ts  tsconfig.json
airdrop/programs/: Turbin3_prereq.ts
amm/: Anchor.toml
amm/programs/amm/src/: lib.rs
escrow/: Anchor.toml  package-lock.json  package.json
escrow/programs/escrow/src/: lib.rs
escrow/tests/: escrow.ts
nft-marketplace/: Anchor.toml
nft-marketplace/programs/nft-marketplace/src/: error.rs  lib.rs
nft-staking/: Anchor.toml
rust-reg/: .gitignore  Cargo.toml
rust-reg/src/: lib.rs
rust-reg/src/programs/: Turbin3_prereq.rs
saipher/: Anchor.toml  package.json
saipher/programs/conditional-plugin/: Cargo.toml
saipher/programs/conditional-plugin/src/: error.rs  lib.rs
saipher/programs/conditional-plugin/src/instructions/: configure_registrar.rs  create_registrar.rs  create_voter_weight_record.rs  mod.rs  update_voter_weight_record.rs
saipher/programs/conditional-plugin/src/state/: mod.rs  registrar.rs  voter_weight_record.rs
saipher/programs/saipher/: Cargo.toml
saipher/programs/saipher/src/: lib.rs
saipher/tests/: saipher.test.ts  test-runner.sh
saipher/tests/utils/: createAndConfirmTransaction.ts  createSetUpgradeAuthority.ts  createUpgradeInstruction.ts  fetchTransactionLogs.ts  writeToBufferAccount.ts
solana-starter/ts/: package.json
solana-starter/ts/cluster1/: nft_image.ts  nft_metadata.ts  nft_mint.ts  spl_init.ts  spl_metadata.ts  spl_mint.ts
vault/: Anchor.toml  package-lock.json  package.json
vault/tests/: vault.ts
(+22 files in other folders)
